# gnosis

./: .flake8  .gitignore  .golangci.yaml  .golangci.yml  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  __init__.py  error_demo.py  go.mod  go.sum  index.html  main.py  openapi.yaml  pyproject.toml  requirements.txt  result.txt  run.py  sample.env
.bin/: create_env.py  setup.sh  vector_search.py
.bin/hooks/: README.md  commit-msg  install-hooks.sh
.cursor/rules/: app.mdc  docs.mdc  examples.mdc  git.mdc  objectives.mdc  scripts.mdc
.github/workflows/: docs.yml  lint.yml  todo.yml
api/: asyncapi.yaml  navi.yaml  openapi.yaml
api/schemas/: components.yaml
app/: __init__.py  config.py  logging_config.py  main.py
app/interceptors/: __init__.py  tool_handler.py
app/models/: README.md  __init__.py  agent.py  chat.py  deepgram.py  mcp.py  openai.py  registry.py  tools.py  vector_store.py
app/routes/: __init__.py  agent.py  chat_completions.py  deepgram.py  mcp.py  openai.py
app/services/: __init__.py  deepgram.py  function_calling.py  openai.py  prompts.py  rag.py  supabase.py
app/utils/: request_helper.py  validate_chat_request.py
cmd/: main.go  main_test.go
docs/: asyncapi.yaml  auth.mmd  chat-completions.mmd  openapi.yaml  websocket-proxy.mmd
examples/: README.md  __init__.py  logging_example.py  requirements.txt
examples/chat_completions/: basic.py  continuation_test.py  function_call.py  metadata_example.py  parallel_tool_calls.py  rag_deepgram.py  (+3 more)
git-hooks/: README.md  install-hooks.sh  prepare-commit-msg
src/: config.py  server.py
tests/: conftest.py
(+121 files in other folders)
